src_old/objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>NumberofImages__c</fullName>
        <label>Number of Images</label>
        <summaryForeignKey>JobAttempt__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OneHubLocationId__c</fullName>
        <formula>Location__r.OneHubLocationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OneHubRetailerId__c</fullName>
        <description>The field that indicates the OneHub Retailer ID number.</description>
        <inlineHelpText>The OneHub retailer ID of the job.</inlineHelpText>
        <label>OneHub Retailer ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalProjectEndDate__c</fullName>
        <description>The field that indicates the original end date for a Project.</description>
        <formula>Project__r.BookedProjectEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End Date (Original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalProjectStartDate__c</fullName>
        <description>The field that indicates the original start date of the Project.</description>
        <formula>Project__r.BookedProjectStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date (Original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OutOfProcessReportingReason__c</fullName>
        <label>Out of Process Reporting Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjLocationName__c</fullName>
        <description>The field that indicates the name of the Project Location.</description>
        <formula>ProjectLocation__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the project location</inlineHelpText>
        <label>Project Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjSLUniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>ProjSLUnique Key</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProjServiceName__c</fullName>
        <description>The field that indicates the name of the Project Service.</description>
        <formula>ProjectService__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the project service</inlineHelpText>
        <label>Project Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectCancelLeadTime__c</fullName>
        <description>The field that indicates the lead time for a Project to be canceled</description>
        <formula>Project__r.ProjectCancelLeadTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The lead name for a project to be canceled</inlineHelpText>
        <label>Project Cancel Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectEndDate__c</fullName>
        <description>The field that indicates the current end date for a Project.</description>
        <formula>Project__r.EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End Date (Current)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that indicates the Location of a Project.</description>
        <inlineHelpText>The location of the project</inlineHelpText>
        <label>Project Location</label>
        <referenceTo>ProjectLocation__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <description>The field that indicates the title of the Project.</description>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The title of the Project.</inlineHelpText>
        <label>Project Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <description>The field that indicates the Project Number.</description>
        <formula>Project__r.ProjectNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOriginId__c</fullName>
        <description>The field that indicates the ID number of the Project Origin.</description>
        <formula>Project__r.OriginID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The project origin ID number</inlineHelpText>
        <label>Project Origin ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOrigin__c</fullName>
        <description>The field that indicates the Project Origin.</description>
        <formula>Project__r.ProjectOrigin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The project origin</inlineHelpText>
        <label>Project Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectScheduleOptionCode__c</fullName>
        <description>The field that indicates the code of the Project Schedule Option.</description>
        <formula>Project__r.ProjectScheduleOptionCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Schedule Option Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectScheduleOptionName__c</fullName>
        <description>The field that indicates who is able to update the Schedule date, the EC or the Project Builder.  In the future, there will also be a System Generated option.</description>
        <inlineHelpText>Determines who (the Execution Company or the Project Builder) is able to update the Schedule date.</inlineHelpText>
        <label>Project Schedule Option</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that indicates the Project Service.</description>
        <inlineHelpText>The project service number</inlineHelpText>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <description>The field that indicates the current start date of the Project.</description>
        <formula>Project__r.StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Start Date (Current)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <description>The field that indicates the status of the Project.</description>
        <formula>TEXT(Project__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The status of the project</inlineHelpText>
        <label>Project Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectVersion__c</fullName>
        <description>The field that indicates the version of the Project.</description>
        <formula>Project__r.UpdateSequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that indicates the name of the Project to which a Job belongs.</description>
        <inlineHelpText>The name of the project for this job</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseAmount__c</fullName>
        <description>The field that indicates the Purchase Amount for the Job.</description>
        <formula>IF(ISBLANK( PurchaseOverRideAmount__c), ProjectService__r.PurchaseAmount__c,PurchaseOverRideAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The purchase amount for the job</inlineHelpText>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PurchaseOverRideAmount__c</fullName>
        <label>Purchase OverRide Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QCFailureReason__c</fullName>
        <description>The field that indicates the reason for the failure of QC.</description>
        <formula>Text(ActiveJobAttempt__r.QCFailureReasonCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Why the QC test failed</inlineHelpText>
        <label>QC Failure Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferralJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The search field for the Referral Job.</description>
        <label>Referral Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportedContactFirstName__c</fullName>
        <description>The field that indicates the first name of the Reported Contact.</description>
        <formula>ActiveJobAttempt__r.ReportedContactFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContactHomeLatitude__c</fullName>
        <description>The field that indicates the home latitude of the Reported Contact.</description>
        <formula>ActiveJobAttempt__r.ReportedContactHomeLatitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The home latitude of the reported contact</inlineHelpText>
        <label>Reported Contact Home Latitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportedContactHomeLongitude__c</fullName>
        <description>The field that indicates the home longitude of the Reported Contact.</description>
        <formula>ActiveJobAttempt__r.AssignedContactHomeLongitude__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The home longitude of the reported contact</inlineHelpText>
        <label>Reported Contact Home Longitude</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportedContactId__c</fullName>
        <description>The field that indicates the ID number of the Reported Contact.</description>
        <formula>ActiveJobAttempt__r.ReportedContactId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ID number of the reported contact</inlineHelpText>
        <label>Reported  Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContactLastName__c</fullName>
        <description>The field that indicates the last name of the Reported Contact.</description>
        <formula>ActiveJobAttempt__r.ReportedContactLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContactPhone__c</fullName>
        <description>The field that indicates the phone number of the Reported Contact.</description>
        <formula>ActiveJobAttempt__r.ReportedContactPhone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The phone number of the reported contact</inlineHelpText>
        <label>Reported Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedContactTitle__c</fullName>
        <description>The field that indicates the title of the Reported Contact.</description>
        <formula>ActiveJobAttempt__r.ReportedContactTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The title of the reported contact</inlineHelpText>
        <label>Reported Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportedEmployeeId__c</fullName>
        <description>The field that indicates the ID number of the Reported Employee.</description>
        <formula>ActiveJobAttempt__r.ReportedEmployeeId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ID number of the reported employee</inlineHelpText>
        <label>Reported Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponsibleExecutionCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that indicates the Execution Company responsible for the Job.</description>
        <inlineHelpText>The name of the execution company responsible for this job</inlineHelpText>
        <label>Responsible Execution Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponsibleForExecution__c</fullName>
        <description>The entity that is responsible for execution. Can be Execution Company, Supplier, or Retailer.</description>
        <inlineHelpText>The entity that is responsible for execution.</inlineHelpText>
        <label>Responsible For Execution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RetailerName__c</fullName>
        <description>The field that indicates the name of the Retailer.</description>
        <formula>Project__r.Retailer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer__c</fullName>
        <description>The field that indicates the Retailer ID.</description>
        <formula>CASESAFEID(Project__r.Retailer__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Retailer ID from the project</inlineHelpText>
        <label>Retailer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RquiresFulfilment__c</fullName>
        <formula>IF(MaterialCount__c&gt;0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Fulfilment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <description>The field that indicates the name of the Service for the Job.</description>
        <inlineHelpText>The name for the service</inlineHelpText>
        <label>ServiceName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceSpecialization__c</fullName>
        <formula>TEXT( Service__r.Specialization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Specialization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field that indicates the Service for the Job.</description>
        <inlineHelpText>The service for the job</inlineHelpText>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShiftClosureOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shift Closure Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SplitType__c</fullName>
        <formula>TEXT(Project__r.SplitType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateCalculated__c</fullName>
        <formula>IF (UPPER(ProjectScheduleOptionCode__c) == &apos;EC&apos;,ProjectStartDate__c,IF (ISBLANK(JobScheduledDate__c),ProjectStartDate__c,JobScheduledDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date (Job)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <formula>JobStartTime__c</formula>
        <label>Start Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyPhotoViewerEncodedId__c</fullName>
        <label>Survey Photo Viewer Encoded Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyPhotoViewerUrl__c</fullName>
        <formula>$Setup.SurveyPhotoViewerSetting__c.Url__c + &apos;?recid=&apos; +  SurveyPhotoViewerEncodedId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Photo Viewer Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeReported__c</fullName>
        <description>The field that displays a summary of total minutes reported.</description>
        <inlineHelpText>Total minutes reported</inlineHelpText>
        <label>Total Time Reported (Minutes)</label>
        <summarizedField>JobAttempt__c.TimeReported__c</summarizedField>
        <summaryForeignKey>JobAttempt__c.Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalJobAttempts__c</fullName>
        <description>The field that displays a summary of total job attempts.</description>
        <label>Total Job Attempts</label>
        <summaryForeignKey>JobAttempt__c.Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Location__c</columns>
        <columns>LocationNumber__c</columns>
        <columns>EstimatedMinutes__c</columns>
        <columns>CompletionStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>jobsListView</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>jobsListView</label>
    </listViews>
    <nameField>
        <displayFormat>JOB-{000000000}</displayFormat>
        <label>Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>EC_Edit_Access__c</fullName>
        <label>EC Edit Access</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Store_Manager_Read_Access__c</fullName>
        <label>Store Manager Read Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>CanNotChangeJobIfClosed</fullName>
        <active>true</active>
        <description>A Job in a CLOSED status cannot have further actions performed.</description>
        <errorConditionFormula>LOWER(PRIORVALUE(JobStatus__c)) == &apos;closed&apos;</errorConditionFormula>
        <errorMessage>A Job in a CLOSED status cannot have further actions performed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cancel_Invalid_Project_Status</fullName>
        <active>false</active>
        <errorConditionFormula>AND(LOWER(TEXT(PRIORVALUE(JobStatus__c))) == &apos;canceled&apos;, LOWER(TEXT(Project__r.Status__c)) != &apos;booked&apos;, LOWER(TEXT(Project__r.Status__c)) != &apos;launched&apos;, LOWER(TEXT(Project__r.Status__c)) != &apos;in progress&apos;)</errorConditionFormula>
        <errorMessage>Cannot cancel job, invalid Job / Project status. Job cannot be canceled if it is already canceled or the project is not in one these statuses (Booked, Launched, In Progress).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Canceled_Reason_Other_Requires_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>LOWER(TEXT(JobStatus__c)) == &apos;canceled&apos; &amp;&amp; LOWER(TEXT(JobCanceledReason__c)) == &apos;other&apos; &amp;&amp; TRIM(JobCanceledComments__c) == &apos;&apos;</errorConditionFormula>
        <errorMessage>Please provide cancel comments when cancel reason is Other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotCancelReportedJob4EndedProject</fullName>
        <active>true</active>
        <description>CSM can&apos;t cancel a reported job if the project is ended.</description>
        <errorConditionFormula>AND(
LOWER(TEXT(JobStatus__c)) == &apos;canceled&apos;,
LOWER(TEXT(PRIORVALUE(JobStatus__c))) == &apos;reported&apos;,
LOWER(ProjectStatus__c) == &apos;ended&apos;
)</errorConditionFormula>
        <errorMessage>CSM can&apos;t cancel a reported job if the project is ended.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_JobSchedDateChange_byPB_ForEC</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT CONTAINS($User.Username,&quot;salesforce.integration&quot;), ISCHANGED(JobScheduledDate__c),  LOWER(ProjectScheduleOptionCode__c) = &apos;ec&apos;)</errorConditionFormula>
        <errorMessage>Project Builder cannot change the scheduled date for a &apos;Execution Company&apos; job / project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_canceled_job_status_change</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(PRIORVALUE(JobStatus__c)) = &apos;Canceled&apos;, TEXT(JobStatus__c) != &apos;Canceled&apos;)</errorConditionFormula>
        <errorMessage>Cannot update the status of a canceled job.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_keep_asng_for_bundled_projects</fullName>
        <active>true</active>
        <description>Keep Assignment cannot be different from location in case of bundled projects.</description>
        <errorConditionFormula>AND( Project__r.BundleServices__c, UPPER(TEXT(KeepAssignmentOverride__c)) !=  &apos;NO OVERRIDE&apos;, NOT ISBLANK(TEXT(KeepAssignmentOverride__c)))</errorConditionFormula>
        <errorMessage>Keep Assignment cannot be overridden for bundled projects.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_multi_days_for_bundled_projects</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NumberOfDays__c &gt; 1,   Project__r.BundleServices__c )</errorConditionFormula>
        <errorDisplayField>NumberOfDays__c</errorDisplayField>
        <errorMessage>Number of days cannot be more than 1 for bundled projects.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_multi_workers_for_AMW_False</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NumberOfWorkers__c &gt; 1,  ProjectService__r.Service__r.IsNumberOfWorkersRequired__c == false)</errorConditionFormula>
        <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
        <errorMessage>Number Of Workers cannot be more than 1 if the service&apos;s AllowMultipleWorkers is set to false.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_multi_workers_for_bundled_proje</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NumberOfWorkers__c &gt; 1,   Project__r.BundleServices__c )</errorConditionFormula>
        <errorDisplayField>NumberOfWorkers__c</errorDisplayField>
        <errorMessage>Number of workers cannot be more than 1 for bundled projects.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_past_schedule_dates</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( JobScheduledDate__c),JobScheduledDate__c &lt; TODAY())</errorConditionFormula>
        <errorMessage>Cannot schedule a job to a date that is in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_schdate_change_diff_from_PLdate</fullName>
        <active>true</active>
        <description>Do not allow a scheduled date that is different from a project location scheduled date in case of a bundled project</description>
        <errorConditionFormula>AND(Project__r.BundleServices__c,ISCHANGED(JobScheduledDate__c), JobScheduledDate__c !=  ProjectLocation__r.LocationScheduledDate__c)</errorConditionFormula>
        <errorMessage>Job Scheduled date has to match the location scheduled date in case of bundled work.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disallow_starttime_for_bundled_projects</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Project__r.BundleServices__c,NOT(ISBLANK(StartTime__c)))</errorConditionFormula>
        <errorDisplayField>JobStartTime__c</errorDisplayField>
        <errorMessage>Start Time cannot be set for Bundled project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECNoReStartReportedJob4InprogressProject</fullName>
        <active>true</active>
        <description>An execution company can&apos;t restart a reported job if the project is in progress.</description>
        <errorConditionFormula>AND(
Lower(ProjectScheduleOptionCode__c) == &apos;ec&apos;,
Lower(Text(JobStatus__c)) == &apos;started&apos;,
Lower(Text(PRIORVALUE(JobStatus__c))) == &apos;reported&apos;,
Lower(ProjectStatus__c) == &apos;in progress&apos;
)</errorConditionFormula>
        <errorMessage>An execution company can&apos;t restart a reported job if the project is in progress.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JobDates_outside_project_window</fullName>
        <active>true</active>
        <errorConditionFormula>OR(StartDateCalculated__c &lt;  ProjectStartDate__c, StartDateCalculated__c &gt;  ProjectEndDate__c, EndDateCalculated__c  &lt; ProjectStartDate__c, EndDateCalculated__c  &gt; ProjectEndDate__c, JobScheduledDate__c &lt;  ProjectStartDate__c, JobScheduledDate__c &gt;  ProjectEndDate__c)</errorConditionFormula>
        <errorMessage>One or more job dates (Start/End/Scheduled) are outside project window.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>JobStartDateNotLaterThanEndDate</fullName>
        <active>true</active>
        <description>Job Start Date can not be later than Job End Date</description>
        <errorConditionFormula>JobStartDate__c &gt; JobEndDate__c</errorConditionFormula>
        <errorMessage>Job Start Date can not be later than Job End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoCancelReportedJob4EndedProject</fullName>
        <active>true</active>
        <description>CSM can&apos;t cancel a reported job if the project is ended.</description>
        <errorConditionFormula>AND(
LOWER(TEXT(PRIORVALUE(JobStatus__c))) == &apos;reported&apos;,
LOWER(TEXT(JobStatus__c)) == &apos;canceled&apos;,
LOWER(ProjectStatus__c) == &apos;ended&apos;
)</errorConditionFormula>
        <errorMessage>CSM can&apos;t cancel a reported job if the project is ended.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoReschedule4ReportedJobWithEndedProject</fullName>
        <active>true</active>
        <description>CSM can&apos;t reschedule a reported job if the project is ended.</description>
        <errorConditionFormula>AND(
ISCHANGED(JobScheduledDate__c),
LOWER(TEXT(PRIORVALUE(JobStatus__c))) == &apos;reported&apos;,
LOWER(ProjectStatus__c) == &apos;ended&apos;
)</errorConditionFormula>
        <errorMessage>CSM can&apos;t reschedule a reported job if the project is ended.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoUpdateOnReportedJob4CanclClsProject</fullName>
        <active>true</active>
        <description>A reported job cannot be updated when the project is either closed or canceled.</description>
        <errorConditionFormula>AND(
Lower(TEXT(PRIORVALUE(JobStatus__c))) == &apos;reported&apos;,
OR(
Lower(ProjectStatus__c) == &apos;closed&apos;,
Lower(ProjectStatus__c) == &apos;canceled&apos;
)
)</errorConditionFormula>
        <errorMessage>A reported job cannot be updated when the project is either closed or canceled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NotReschduleReportedJobWithEndedProject</fullName>
        <active>true</active>
        <description>CSM can&apos;t reschedule a &apos;Reported&apos; job if the Project status is &apos;Ended&apos;</description>
        <errorConditionFormula>AND ( 
LOWER(ProjectStatus__c) == &apos;ended&apos;,
ISPICKVAL(JobStatus__c, &apos;Reported&apos;),
PRIORVALUE(JobScheduledDate__c) &lt;&gt; null,
PRIORVALUE(JobScheduledDate__c) &lt;&gt; JobScheduledDate__c 
)</errorConditionFormula>
        <errorMessage>A reported job can not be rescheduled if the project is ended.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NotRestartReportedJobForInProgressProjec</fullName>
        <active>true</active>
        <description>EC can not restart a reported job if the project is in progress.</description>
        <errorConditionFormula>AND(
ISPICKVAL(JobStatus__c, &apos;Started&apos;),
ISPICKVAL(JobStatus__c, &apos;Reported&apos;),
LOWER(ProjectStatus__c) == &apos;in progress&apos;,
LOWER(ProjectScheduleOptionCode__c) == &apos;ec&apos;
)</errorConditionFormula>
        <errorMessage>EC can not restart a reported job if the project is in progress.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Allowed_Reschedule_Dates</fullName>
        <active>true</active>
        <description>Check if the new reschedule date is in the list of allowed reschedule dates.</description>
        <errorConditionFormula>AND(CONTAINS($User.Username,&quot;salesforce.integration&quot;), ISCHANGED(JobScheduledDate__c),!ISBLANK(Project__r.AllowedRescheduleDates__c), !ISNULL(Project__r.AllowedRescheduleDates__c), !CONTAINS(Project__r.AllowedRescheduleDates__c, TEXT(JobScheduledDate__c)))</errorConditionFormula>
        <errorMessage>New reschedule date not in the list of allowed schedule dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Start_Time</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK(JobStartTime__c),
REGEX(JobStartTime__c, &quot;^(1[0-2]|0?[1-9]):[0-5][0-9] ([AaPp][Mm])$&quot;)
)
)</errorConditionFormula>
        <errorDisplayField>JobStartTime__c</errorDisplayField>
        <errorMessage>Invalid Start Time. Please follow this format HH:MM AMPM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prevent_negative_values_Number_of_Worker</fullName>
        <active>true</active>
        <errorConditionFormula>NumberOfWorkers__c &lt;0</errorConditionFormula>
        <errorMessage>Number Of Workers Field  not accept  zero and negative numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prevent_negative_values_purchase_amount</fullName>
        <active>true</active>
        <errorConditionFormula>PurchaseAmount__c &lt;0</errorConditionFormula>
        <errorMessage>Purchase Amount  Field not accept zero and negative numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>prevent_negative_valuesestimated_minutes</fullName>
        <active>true</active>
        <errorConditionFormula>EstimatedMinutesOverride__c &lt;0</errorConditionFormula>
        <errorMessage>Estimated Minutes  Field not accept zero and negative numbers</errorMessage>
    </validationRules>
</CustomObject>